# tueplots

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yaml  ci.yml  linting.yml  notebooks.yaml  notebooks.yml  python-publish.yaml  python-publish.yml
docs/: _readme.md  _readme.txt  conf.py  examples.rst  index.rst  jupytext.toml  make.bat  requirements-sphinx-build.txt  tueplots.constants.color.rst  tueplots.constants.rst  tueplots.markers.rst  tueplots.rst
docs/examples/: bundles.ipynb  color-cycles.ipynb  figsizes.ipynb  fonts.ipynb  fontsizes.ipynb  markers.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: figsizes.rst  fonts.rst  tueplots.axes.rst  tueplots.constants.color.palettes.rst  tueplots.constants.markers.rst  tueplots.figsizes.aistats2022_full.rst  tueplots.figsizes.aistats2022_half.rst  tueplots.figsizes.beamer_169.rst  tueplots.figsizes.cvpr2022_full.rst  tueplots.figsizes.cvpr2022_half.rst  tueplots.figsizes.icml2022_full.rst  tueplots.figsizes.icml2022_half.rst  tueplots.figsizes.jmlr2001.rst  tueplots.figsizes.neurips2021.rst  tueplots.fonts.aistats2022_tex.rst  tueplots.fonts.beamer_moml.rst  tueplots.fonts.beamer_moml_dark_bg.rst  tueplots.fonts.icml2022.rst  tueplots.fonts.icml2022_tex.rst  tueplots.fonts.jmlr2001_tex.rst  tueplots.fonts.neurips2021.rst  tueplots.fonts.neurips2021_tex.rst  tueplots.fonts.rst  tueplots.rst
docs/source/docs_api/: tueplots.bundles.rst  tueplots.constants.color.rgb.rst  tueplots.constants.color.rst  tueplots.cycler.rst  tueplots.figsizes.rst  tueplots.fontsizes.rst
docs/source/docs_dev/: continuous_integration.md  contribution_guide.md  examples.md
docs/source/example_notebooks/: advanced.ipynb  axes.ipynb  bundles.ipynb  color-cycles.ipynb  figsizes.ipynb  fonts.ipynb  fontsizes.ipynb  markers.ipynb
docs/source/example_notebooks/_human_readable_copies_for_version_control/: axes.py  bundles.py  figsizes.py  fontsizes.py  markers.py
docs/source/example_notebooks/as_py_percent/: color-cycles.py  fonts.py
docs/source/example_notebooks/notebooks/: axes.ipynb  bundles.ipynb  color-cycles.ipynb  figsizes.ipynb  fonts.ipynb  fontsizes.ipynb  markers.ipynb
docs/source/getting_started/: application_icml2022.md  troubleshooting.md  usage_example.md
docs/source/quickstart/: application_icml2022.md  installation.md
examples/: axes.ipynb  bundles.ipynb  color-cycles.ipynb  context.ipynb  figsizes.ipynb  figure-size.ipynb  font-sizes.ipynb  fonts.ipynb  fontsizes.ipynb  marker.ipynb  markers.ipynb
momlplots/: colors.py  figsize.py  fonts.py
tests/: __init__.py  test_axes.py  test_bundles.py  test_bundles_error_handling.py  test_colors.py  test_context.py  test_cycler.py  test_deprecations.py  test_figsize.py  test_figsizes.py  test_fonts.py  test_fontsizes.py  test_marker.py  test_markers.py  test_match_math_font.py  test_rc_params.py  test_times_text_cmodern_math.py
tests/rc_params_cases/: axes.py  cycler.py  figsizes.py  fonts.py  fontsizes.py
tests/test_color/: test_cycles.py
tests/test_color/test_constants/: test_rgb.py
tests/test_constants/: test_arrays.py  test_markers.py
tests/test_constants/test_arrays_cases/: case_markers.py
tests/test_constants/test_arrays_cases/color_cases/: case_palettes.py  case_rgb.py
tests/test_constants/test_color/: test_palettes.py  test_rgb.py
tests/test_rc_params_cases/: case_axes.py  case_bundles.py  case_cycler.py  case_figsizes.py  case_fonts.py  case_fontsizes.py  case_markers.py
tueplots/: __init__.py  axes.py  bundles.py  colors.py  context.py  cycler.py  figsize.py  figsizes.py  fonts.py  fontsizes.py  marker.py  markers.py
tueplots/color/: cycler.py
tueplots/color/constants/: rgb.py
tueplots/constants/: __init__.py  markers.py
tueplots/constants/color/: __init__.py  palettes.py  rgb.py
