[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "tueplots"
authors = [
    {name="Nicholas Krämer", email="pekra@dtu.dk"}
]
description = "Scientific plotting made easy."
readme = "README.md"
requires-python=">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
  "matplotlib",
  "numpy",
]

[project.optional-dependencies]
ci = ["tox"]
examples = ["jupyter"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tueplots*"]

[tool.setuptools_scm]
version_file = "tueplots/_version.py"


# Configuration of the black code style checker
# For more information about Black's usage of this file, see
# https://github.com/psf/black#pyprojecttoml
[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "true"
force_grid_wrap = "0"
use_parentheses = "true"
line_length = "88"
profile = "black"


# Pylint configuration

[tool.pylint.master]
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
]


[tool.pylint.messages_control]
disable = [
    # Specific ignores
    "invalid-name",  # we name things the way we want.
    "line-too-long",  # black takes care of linebreaks itself. Long docs dont really matter.
    "import-error",  # caught by the tests, not by pylint.
    "too-many-arguments",  # e.g. figsize-configs tend to have many arguments, which is acceptable.
]

[tool.pylint.format]
max-line-length = "88"
