[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "tueplots"
authors = [
    {name="Nicholas Krämer", email="pekra@dtu.dk"}
]
description = "Scientific plotting made easy."
readme = "README.md"
requires-python=">=3.10"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
  "matplotlib",
  "numpy",
]

[project.optional-dependencies]
ci = ["tox"]
examples = ["jupyter"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tueplots*"]

[tool.setuptools_scm]
version_file = "tueplots/_version.py"

[tool.ruff]
extend-exclude = [
    "tueplots/__init__.py",
    "tueplots/_version.py"
]

[tool.ruff.lint]
# See: https://beta.ruff.rs/docs/rules/
select = [
    # pycodestyle (warning, error)
    "W",
    "E",
    # Pyflakes:
    "F",
    # pyupgrade:
    "UP",
    # flake8-bugbear:
    "B",
    # flake8-builtins:
    "A",
    # flake8-import-conventions:
    "ICN",
    # flake8-pytest-style:
    "PT",
    # flake8-quotes:
    "Q",
    # flake8-return:
    "RET",
    # flake8-simplify:
    "SIM",
    # flake8-unused-arguments:
    "ARG",
    # Ruff-specific rules:
    "RUF",
    # isort:
    "I",
    # flake8-errormsg:
    "EM",
    # tryceratops:
    "TRY",
    # Docstrings:
    "D",
]

ignore = [
    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203",
    # warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    "D213",
    # zip(..., strict=True/False) is not supported on Python < 3.10
    "B905",
    # Disable line-too-long because it is handled by formatter (and we allow docstrings to contain long lines)
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
"docs/**" = ["A", "D"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
