[metadata]
name = tueplots
description = Scientific plotting made easy
author = Nicholas Krämer
author_email = nicholas.kraemer@uni-tuebingen.de
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    matplotlib
    numpy
python_requires = >=3.7


[options.extras_require]
dev =
    pytest
    jupyter
    tox
    black
